# ubisoft-challenge

./: CMakeLists.txt  Readme.md  vcpkg.json
cmake/compatibility/: Boost.in.cmake  GTest.in.cmake  Generic.in.cmake  Qt6.in.cmake
src/: main.cpp
src/include/: Active.h  AuthState.h  Context.h  DBCollection.h  DashboardState.h  Database.h  DepositState.h  EndUser.h  ModelBase.h  Models.h  Page.h  PageManager.h  Server.h  Session.h  State.h  StateManager.h  User.h  UserInterface.h  Utils.h
src/include/pages/: Auth.h  Buy.h  Dashboard.h  Deposit.h  DepositFund.h  DepositItem.h  Display.h  Sell.h  Withdraw.h  WithdrawFund.h  WithdrawItem.h
src/include/states/: AuthState.h  DashboardState.h  DepositFundState.h  DepositItemState.h  DepositState.h  SellState.h  WithdrawFundState.h  WithdrawItemState.h  WithdrawState.h
