cmake_minimum_required(VERSION 3.10)
set(CMAKE_TOOLCHAIN_FILE "${CMAKE_SOURCE_DIR}/vcpkg/scripts/buildsystems/vcpkg.cmake")
set(SOURCE_DIR "${CMAKE_SOURCE_DIR}/src")
project(auction-house C CXX)
find_package(Threads REQUIRED)
find_package(Boost COMPONENTS json)
add_executable(auction-house "${SOURCE_DIR}/main.cpp")
include_directories(${Boost_INCLUDE_DIRS} "${SOURCE_DIR}/include")
target_link_libraries(auction-house Boost::json)
set(CMAKE_CXX_STANDARD 17)
