cmake_minimum_required(VERSION 3.18)
project(auction-house)
cmake_path(SET FOBTEST_MODULE_PATH ${CMAKE_SOURCE_DIR}/cmake)
cmake_path(NORMAL_PATH FOBTEST_MODULE_PATH)
set(SOURCE_DIR "${CMAKE_SOURCE_DIR}/src")
list(APPEND CMAKE_MODULE_PATH ${FOBTEST_MODULE_PATH})
include(FOBBootstrap)
find_package(Threads)
fob_find_or_build(Boost)
add_executable(auction-house "${SOURCE_DIR}/main.cpp")
include_directories(${Boost_INCLUDE_DIRS} "${SOURCE_DIR}/include")
target_link_libraries(auction-house)
set(CMAKE_CXX_STANDARD 17)
